# stubpy

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: docs.yml  tests.yml
demo/: container.py  dispatch.py  element.py  export.py  functions.py  graphics.py  mixed.py  primitives.py  scene.py  style.py  types.py  variables.py
docs/: Makefile  changelog.rst  conf.py  index.rst  make.bat
docs/_static/: custom.css
docs/_templates/autosummary/: module.rst
docs/api/: aliases.rst  annotations.rst  ast_pass.rst  config.rst  context.rst  diagnostics.rst  docstring.rst  emitter.rst  generator.rst  imports.rst  index.rst  loader.rst  public.rst  resolver.rst  stub_merge.rst  symbols.rst
docs/api/reference/: ASTSymbols.rst  AliasEntry.rst  AliasSymbol.rst  ClassInfo.rst  ClassSymbol.rst  Diagnostic.rst  DiagnosticCollector.rst  DiagnosticLevel.rst  DiagnosticStage.rst  ExecutionMode.rst  FunctionInfo.rst  FunctionSymbol.rst  OverloadGroup.rst  PackageResult.rst  StubConfig.rst  StubContext.rst  SymbolTable.rst  TypeVarInfo.rst  VariableInfo.rst  VariableSymbol.rst  annotation_to_str.rst  ast_harvest.rst  build_symbol_table.rst  default_to_str.rst  find_config_file.rst  format_param.rst  generate_alias_stub.rst  generate_class_stub.rst  generate_function_stub.rst  generate_overload_group_stub.rst  generate_package.rst  generate_stub.rst  generate_variable_stub.rst  index.rst  load_config.rst  register_annotation_handler.rst
docs/examples/: basic.rst  cross_file.rst  extending.rst  kwargs_backtracing.rst  mro_backtracing.rst  overloads.rst  project_integration.rst  special_classes.rst  type_aliases.rst
docs/guides/: how_it_works.rst  installation.rst  quickstart.rst
stubpy/: __init__.py  __main__.py  aliases.py  annotations.py  ast_pass.py  config.py  context.py  diagnostics.py  docstring.py  emitter.py  generator.py  imports.py  loader.py  resolver.py  stub_merge.py  symbols.py
tests/: conftest.py  run_all_tests.py  run_tests.py  test_aliases.py  test_annotations.py  test_ast_pass.py  test_config.py  test_context.py  test_diagnostics.py  test_docstring.py  test_emitter.py  test_function_resolver.py  test_generator.py  test_imports.py  test_integration.py  test_loader.py  test_main.py  test_module_symbols.py  test_phase2.py  test_resolver.py  test_special_classes.py  test_stub_merge.py  test_symbols.py
